[package]
name = "rusty_dick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "framework",
    "standard_framework",
] }
tokio = { version = "1.21.2", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.155"
